Add age input for image generation

--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
             </div>
             <div class="date-fields">
                 <input type="text" placeholder="Date of Birth (dd/mm/yyyy)" required>
-                <input type="text" placeholder="Lost Date (mmm/yyyy)" required>
+                <input type="text" placeholder="Lost Date (mm/yyyy)" required>
             </div>
             <div class="picture-upload">
                 <label for="picture">Add Picture Here</label>
