--- a/search_results.html
+++ b/search_results.html
@@ -33,7 +33,7 @@
             <div class="result-info">
                 <p><strong>Phan Công Danh</strong></p>
                 <p>Gender: Male</p>
-                <p>Date of Birth: 2004</p>
+                <p>Year of Birth: 2004</p>
                 <p>Hometown: Hồ Chí Minh City, Việt Nam</p>
                 <div class="similarity-bar">
                     <div class="similarity" style="width: 75%;"></div>
@@ -47,7 +47,7 @@
             <div class="result-info">
                 <p><strong>Phan Công Danh</strong></p>
                 <p>Gender: Male</p>
-                <p>Date of Birth: 2005</p>
+                <p>Year of Birth: 2005</p>
                 <p>Hometown: Vũng Tàu, Việt Nam</p>
                 <div class="similarity-bar">
                     <div class="similarity" style="width: 60%;"></div>
@@ -61,7 +61,7 @@
             <div class="result-info">
                 <p><strong>Phạm Công Danh</strong></p>
                 <p>Gender: Male</p>
-                <p>Date of Birth: 2005</p>
+                <p>Year of Birth: 2005</p>
                 <p>Hometown: Hưng Yên, Việt Nam</p>
                 <div class="similarity-bar">
                     <div class="similarity" style="width: 50%;"></div>
@@ -75,7 +75,7 @@
             <div class="result-info">
                 <p><strong>Phạm Công Danh</strong></p>
                 <p>Gender: Male</p>
-                <p>Date of Birth: 2003</p>
+                <p>Year of Birth: 2003</p>
                 <p>Hometown: Hưng Yên, Việt Nam</p>
                 <div class="similarity-bar">
                     <div class="similarity" style="width: 45%;"></div>
