--- a/generate_page.html
+++ b/generate_page.html
@@ -31,10 +31,13 @@
                 <h3>Input</h3>
             </div>
             <div class="output-box">
-                <h3>Output</h3>
+                <h3>Output (after type date of birth and lost date)</h3>
             </div>
             <div class="button-section">
-                <button class="upload-button">Upload your lost relative's profile image</button>
+                <div class="button-group">
+                    <button class="upload-button">Upload your lost relative's profile image</button>
+                    <input class="age-input" type="number" placeholder="Select age to generate">
+                </div>
                 <button class="try-again-button">Try again</button>
             </div>
         </div>
@@ -53,8 +56,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="text" placeholder="Date of Birth (dd/mmm/yyyy)" required>
-                    <input type="text" placeholder="Lost Date (mmm/yyyy)" required>
+                    <input type="text" placeholder="Date of Birth (dd/mm/yyyy)" required>
+                    <input type="text" placeholder="Lost Date (mm/yyyy)" required>
                 </div>
                 <div class="form-group">
                     <textarea placeholder="Describe what happened on the day you lost your relative"
