--- a/profile_page.html
+++ b/profile_page.html
@@ -7,6 +7,7 @@
     <title>Profile Page - KinFind</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/profile_page.css">
+    <link rel="stylesheet" href="css/chat_popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -95,7 +96,7 @@
     <div id="chatPopup" class="chat-popup">
         <div class="chat-header">
             <img src="images/user_picture.png" alt="User Picture">
-            <div>Danh Phan</div>
+            <div>Phan Công Danh</div>
             <div class="chat-controls">
                 <button onclick="minimizeChat()">-</button>
                 <button onclick="closeChat()">X</button>
