Add extra features

--- a/generate_page.html
+++ b/generate_page.html
@@ -31,7 +31,7 @@
                 <h3>Input</h3>
             </div>
             <div class="output-box">
-                <h3>Output (after type date of birth and lost date)</h3>
+                <h3>Output</h3>
             </div>
             <div class="button-section">
                 <div class="button-group">
