--- a/search_results.html
+++ b/search_results.html
@@ -39,9 +39,16 @@
                     <div class="similarity" style="width: 75%;"></div>
                 </div>
                 <p class="similarity-text">75% Similarity</p>
+                <p class="description">
+                    Bánh chưng thơm lừng tỏa ra khắp nhà, đánh thức mình dậy vào sáng <b>mùng Một Tết</b>. Nhìn <b>mâm
+                        cỗ cùng ông
+                        bà </b> đẹp mắt, mình háo hức muốn được đi chơi <b>công viên cùng chị</b>. Mình lon ton chạy
+                    theo chị, say sưa...
+                </p>
             </div>
             <a href="profile_page.html"><button class="profile-button">Profile</button></a>
         </div>
+
         <div class="result-card">
             <img src="images/user_picture_2.png" alt="User Picture">
             <div class="result-info">
@@ -53,6 +60,11 @@
                     <div class="similarity" style="width: 60%;"></div>
                 </div>
                 <p class="similarity-text">60% Similarity</p>
+                <p class="description">
+                    Mùi hương của <b>mùng Một Tết</b> luôn khiến mình nhớ về những ngày thơ ấu, khi cả gia đình cùng
+                    quây quần bên <b>mâm cỗ cùng ông bà</b>. Mình và chị thường cùng nhau đi <b>công viên cùng chị</b>,
+                    nơi...
+                </p>
             </div>
             <a href="profile_page.html"><button class="profile-button">Profile</button></a>
         </div>
@@ -67,6 +79,12 @@
                     <div class="similarity" style="width: 50%;"></div>
                 </div>
                 <p class="similarity-text">50% Similarity</p>
+                <p class="description">
+                    Tiếng cười rộn rã khắp nhà, đánh thức mình dậy vào sáng <b>mùng Một Tết</b>. Nhìn <b>mâm cỗ cùng ông
+                        bà</b> đầy sắc màu, mình cảm thấy háo hức muốn cùng <b>công viên cùng chị</b>. Mình lon ton chạy
+                    ...
+                </p>
+
             </div>
             <a href="profile_page.html"><button class="profile-button">Profile</button></a>
         </div>
@@ -81,6 +99,10 @@
                     <div class="similarity" style="width: 45%;"></div>
                 </div>
                 <p class="similarity-text">45% Similarity</p>
+                <p class="description">
+                    Sáng sớm <b>mùng Một Tết</b>, hương thơm của <b>mâm cỗ cùng ông bà</b> lan tỏa khắp nhà. Mình háo
+                    hức chờ đợi để được đi <b>công viên cùng chị</b>. Mình lon ton...
+                </p>
             </div>
             <a href="profile_page.html"><button class="profile-button">Profile</button></a>
         </div>
